changed size of carousel on smaller screens to prevent squashiing and increased the size on larger screens to fit more of the page

--- a/assets/style.css
+++ b/assets/style.css
@@ -139,10 +139,6 @@ margin-bottom: 5px;
     margin: 0px auto 0px auto;
 }
 
-.item{
-    width: 400px;
-    height: 300px;
-}
 
 .section-three-index{
     background-color: rgb(8, 185, 185);
